--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
   --color-negative: #6B8E23;
   --color-button: #896A58;
   --color-button-text: #E6F2E6;
+  --color-menu-bg: #556B2F;
 
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
